--- a/webs/templates/display.html
+++ b/webs/templates/display.html
@@ -12,7 +12,7 @@
                                                 (★☆☆☆☆，请谨慎访问)！
                                             {% elif reliability<=0.6 %}
                                                 (★★☆☆☆)，请谨慎访问！
-                                            {% elif reliability<=0.7 %}
+                                            {% elif reliability<=0.8 %}
                                                 (★★★☆☆)，可以访问！
                                             {% elif reliability<=0.9 %}
                                                 (★★★★☆)，请放心访问！
@@ -24,7 +24,7 @@
     <h3>{{ error }}</h3>
     {% endif %}
     <hr>
-    {% if info %}
+    {% if info and info_flag %}
     <table border="1px">
         <tr>
             <th align="center" width = "150px">主办单位名称</th>
@@ -40,6 +40,8 @@
         {% endif %}
         </tr>
     </table>
+    {% else %}
+        <h4>{{ info }}</h4>
     {% endif %}
 </div>
 {% endblock %}
